--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:20:56 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:21:49 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -139,38 +139,6 @@ body {
   </tr>
   </thead>
   <tbody>
-    <tr>
-      <td class="bigbold">Barb Wellard</td>
-      <td class="bigbold">-5</td>
-      <td>Joaquin Niemann -3
--3 thru 9</td>
-      <td>Cameron Smith -2
--2 thru 10</td>
-      <td>Jon Rahm(W) E
-Not started</td>
-      <td>Sam Burns E
-Not started</td>
-      <td class="greyout leftborder">Brooks Koepka E
-Not started</td>
-      <td class="greyout">Xander Schauffele E
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Low Golf IQ</td>
-      <td class="bigbold">-5</td>
-      <td>Joaquin Niemann -3
--3 thru 9</td>
-      <td>Corey Conners -1
--1 thru 4</td>
-      <td>Brian Harman -1
--1 thru 14</td>
-      <td>Sam Burns E
-Not started</td>
-      <td class="greyout leftborder">Viktor Hovland E
-Not started</td>
-      <td class="greyout">Shane Lowry(W) +2
-+2 thru 11</td>
-    </tr>
     <tr>
       <td class="bigbold">Walk 2</td>
       <td class="bigbold">-4</td>
@@ -183,8 +151,24 @@ Not started</td>
       <td>Viktor Hovland(W) E
 Not started</td>
       <td class="greyout leftborder">Sam Burns E
-Not started</td>
+E thru 1</td>
       <td class="greyout">Tyrrell Hatton E
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Barb Wellard</td>
+      <td class="bigbold">-4</td>
+      <td>Joaquin Niemann -2
+-2 thru 10</td>
+      <td>Cameron Smith -2
+-2 thru 10</td>
+      <td>Jon Rahm(W) E
+Not started</td>
+      <td>Sam Burns E
+E thru 1</td>
+      <td class="greyout leftborder">Brooks Koepka E
+Not started</td>
+      <td class="greyout">Xander Schauffele E
 Not started</td>
     </tr>
     <tr>
@@ -245,11 +229,11 @@ Not started</td>
       <td>Jon Rahm(W) E
 Not started</td>
       <td>Sam Burns E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Xander Schauffele E
 Not started</td>
       <td class="greyout">Tiger Woods E
-E thru 9</td>
+E thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
@@ -307,7 +291,7 @@ Not started</td>
       <td>Daniel Berger -1
 -1 thru 10</td>
       <td>Robert MacIntyre -1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Collin Morikawa E
 Not started</td>
       <td class="greyout leftborder">Jon Rahm E
@@ -323,13 +307,13 @@ Not started</td>
       <td>Scottie Scheffler -1
 -1 thru 8</td>
       <td>Sam Burns E
-Not started</td>
+E thru 1</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td class="greyout leftborder">Brooks Koepka E
 Not started</td>
-      <td class="greyout">Louis Oosthuizen +1
-+1 thru 9</td>
+      <td class="greyout">Louis Oosthuizen +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Team Steve</td>
@@ -360,8 +344,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
-      <td class="greyout">Justin Thomas E
-E thru 8</td>
+      <td class="greyout">Justin Thomas +1
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
@@ -371,7 +355,7 @@ E thru 8</td>
       <td>Corey Conners -1
 -1 thru 4</td>
       <td>Robert MacIntyre -1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td class="greyout leftborder">Rory McIlroy E
@@ -390,10 +374,10 @@ Not started</td>
 E thru 9</td>
       <td>Xander Schauffele E
 Not started</td>
-      <td class="greyout leftborder">Justin Thomas E
-E thru 8</td>
-      <td class="greyout">Marc Leishman +1
-+1 thru 1</td>
+      <td class="greyout leftborder">Marc Leishman +1
++1 thru 2</td>
+      <td class="greyout">Justin Thomas +1
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Uphill into the Wind</td>
@@ -454,10 +438,10 @@ E thru 9</td>
 Not started</td>
       <td>Patrick Cantlay E
 Not started</td>
-      <td class="greyout leftborder">Louis Oosthuizen +1
-+1 thru 9</td>
-      <td class="greyout">Shane Lowry +2
+      <td class="greyout leftborder">Shane Lowry +2
 +2 thru 11</td>
+      <td class="greyout">Louis Oosthuizen +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
@@ -474,6 +458,22 @@ Not started</td>
 Not started</td>
       <td class="greyout">Xander Schauffele E
 Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">-3</td>
+      <td>Joaquin Niemann -2
+-2 thru 10</td>
+      <td>Corey Conners -1
+-1 thru 4</td>
+      <td>Sam Burns E
+E thru 1</td>
+      <td>Brian Harman E
+E thru 15</td>
+      <td class="greyout leftborder">Viktor Hovland E
+Not started</td>
+      <td class="greyout">Shane Lowry(W) +2
++2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Albert Selina</td>
@@ -517,7 +517,7 @@ Not started</td>
       <td>Patrick Cantlay(W) E
 Not started</td>
       <td>Sam Burns E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Viktor Hovland E
 Not started</td>
       <td class="greyout">Jon Rahm E
@@ -528,30 +528,30 @@ Not started</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -2
 -2 thru 10</td>
-      <td>Justin Thomas(W) E
-E thru 8</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Brooks Koepka E
 Not started</td>
-      <td class="greyout leftborder">Xander Schauffele E
+      <td>Xander Schauffele E
 Not started</td>
-      <td class="greyout">Will Zalatoris E
+      <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
+      <td class="greyout">Justin Thomas(W) +1
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -2
 -2 thru 10</td>
-      <td>Justin Thomas(W) E
-E thru 8</td>
       <td>Matthew Fitzpatrick E
 Not started</td>
       <td>Brooks Koepka E
 Not started</td>
-      <td class="greyout leftborder">Will Zalatoris E
+      <td>Will Zalatoris E
 Not started</td>
+      <td class="greyout leftborder">Justin Thomas(W) +1
++1 thru 9</td>
       <td class="greyout">Shane Lowry +2
 +2 thru 11</td>
     </tr>
@@ -560,14 +560,14 @@ Not started</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -2
 -2 thru 10</td>
-      <td>Justin Thomas(W) E
-E thru 8</td>
       <td>Sam Burns E
-Not started</td>
+E thru 1</td>
       <td>Rory McIlroy E
 Not started</td>
-      <td class="greyout leftborder">Xander Schauffele E
+      <td>Xander Schauffele E
 Not started</td>
+      <td class="greyout leftborder">Justin Thomas(W) +1
++1 thru 9</td>
       <td class="greyout">Justin Rose +2
 +2 thru 4</td>
     </tr>
@@ -585,7 +585,7 @@ Not started</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
       <td class="greyout">Bubba Watson E
-E thru 2</td>
+E thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
@@ -594,12 +594,12 @@ E thru 2</td>
 -1 thru 4</td>
       <td>Scottie Scheffler -1
 -1 thru 8</td>
-      <td>Justin Thomas(W) E
-E thru 8</td>
       <td>Brooks Koepka E
 Not started</td>
-      <td class="greyout leftborder">Jordan Spieth E
+      <td>Jordan Spieth E
 Not started</td>
+      <td class="greyout leftborder">Justin Thomas(W) +1
++1 thru 9</td>
       <td class="greyout">Shane Lowry +2
 +2 thru 11</td>
     </tr>
@@ -608,14 +608,14 @@ Not started</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -2
 -2 thru 10</td>
-      <td>Justin Thomas(W) E
-E thru 8</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Viktor Hovland E
 Not started</td>
-      <td class="greyout leftborder">Brooks Koepka E
+      <td>Brooks Koepka E
 Not started</td>
+      <td class="greyout leftborder">Justin Thomas(W) +1
++1 thru 9</td>
       <td class="greyout">Shane Lowry +2
 +2 thru 11</td>
     </tr>
@@ -630,40 +630,40 @@ Not started</td>
 E thru 9</td>
       <td>Xander Schauffele E
 Not started</td>
-      <td class="greyout leftborder">Justin Thomas E
-E thru 8</td>
-      <td class="greyout">Tiger Woods E
-E thru 9</td>
+      <td class="greyout leftborder">Tiger Woods E
+E thru 10</td>
+      <td class="greyout">Justin Thomas +1
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunsets</td>
       <td class="bigbold">-1</td>
       <td>Scottie Scheffler -1
 -1 thru 8</td>
-      <td>Justin Thomas(W) E
-E thru 8</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Viktor Hovland E
 Not started</td>
-      <td class="greyout leftborder">Rory McIlroy E
+      <td>Rory McIlroy E
 Not started</td>
-      <td class="greyout">Xander Schauffele E
+      <td class="greyout leftborder">Xander Schauffele E
 Not started</td>
+      <td class="greyout">Justin Thomas(W) +1
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-1</td>
       <td>Scottie Scheffler -1
 -1 thru 8</td>
-      <td>Justin Thomas(W) E
-E thru 8</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Tony Finau E
 E thru 8</td>
-      <td class="greyout leftborder">Will Zalatoris E
+      <td>Will Zalatoris E
 Not started</td>
+      <td class="greyout leftborder">Justin Thomas(W) +1
++1 thru 9</td>
       <td class="greyout">Shane Lowry +2
 +2 thru 11</td>
     </tr>
@@ -681,45 +681,45 @@ Not started</td>
       <td class="greyout leftborder">Xander Schauffele E
 Not started</td>
       <td class="greyout">Adam Scott E
-E thru 7</td>
+E thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">-1</td>
       <td>Daniel Berger -1
 -1 thru 10</td>
-      <td>Justin Thomas(W) E
-E thru 8</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Viktor Hovland E
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm E
+      <td>Jon Rahm E
 Not started</td>
-      <td class="greyout">Xander Schauffele E
+      <td class="greyout leftborder">Xander Schauffele E
 Not started</td>
+      <td class="greyout">Justin Thomas(W) +1
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Philip Dale</td>
       <td class="bigbold">-1</td>
       <td>Scottie Scheffler -1
 -1 thru 8</td>
-      <td>Justin Thomas(W) E
-E thru 8</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Brooks Koepka E
 Not started</td>
-      <td class="greyout leftborder">Xander Schauffele E
+      <td>Xander Schauffele E
 Not started</td>
-      <td class="greyout">Jordan Spieth E
+      <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
+      <td class="greyout">Justin Thomas(W) +1
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
       <td class="bigbold">-1</td>
       <td>Patrick Reed -1
--1 thru 2</td>
+-1 thru 3</td>
       <td>Viktor Hovland(W) E
 Not started</td>
       <td>Brooks Koepka E
@@ -776,24 +776,24 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
-      <td class="greyout">Justin Thomas E
-E thru 8</td>
+      <td class="greyout">Justin Thomas +1
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Jabby</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners -1
 -1 thru 4</td>
-      <td>Justin Thomas(W) E
-E thru 8</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Rory McIlroy E
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm E
+      <td>Jon Rahm E
 Not started</td>
-      <td class="greyout">Will Zalatoris E
+      <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
+      <td class="greyout">Justin Thomas(W) +1
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Fred Jamieson</td>
@@ -816,16 +816,16 @@ Not started</td>
       <td class="bigbold">-1</td>
       <td>Scottie Scheffler -1
 -1 thru 8</td>
-      <td>Justin Thomas(W) E
-E thru 8</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Xander Schauffele E
 Not started</td>
-      <td class="greyout leftborder">Will Zalatoris E
+      <td>Will Zalatoris E
 Not started</td>
-      <td class="greyout">Louis Oosthuizen +1
+      <td class="greyout leftborder">Justin Thomas(W) +1
 +1 thru 9</td>
+      <td class="greyout">Louis Oosthuizen +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Neville Spillman</td>
@@ -835,7 +835,7 @@ Not started</td>
       <td>Jordan Spieth(W) E
 Not started</td>
       <td>Sam Burns E
-Not started</td>
+E thru 1</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td class="greyout leftborder">Brooks Koepka E
@@ -886,26 +886,26 @@ Not started</td>
 Not started</td>
       <td>Xander Schauffele E
 Not started</td>
-      <td class="greyout leftborder">Justin Thomas E
-E thru 8</td>
-      <td class="greyout">Louis Oosthuizen +1
+      <td class="greyout leftborder">Justin Thomas +1
 +1 thru 9</td>
+      <td class="greyout">Louis Oosthuizen +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Yellow in Augusta</td>
       <td class="bigbold">0</td>
-      <td>Justin Thomas(W) E
-E thru 8</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Jon Rahm E
 Not started</td>
-      <td class="greyout leftborder">Xander Schauffele E
+      <td>Xander Schauffele E
 Not started</td>
-      <td class="greyout">Jordan Spieth E
+      <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
+      <td class="greyout">Justin Thomas(W) +1
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
@@ -926,34 +926,34 @@ Out With Injury</td>
     <tr>
       <td class="bigbold">Glen Wilson</td>
       <td class="bigbold">0</td>
-      <td>Justin Thomas(W) E
-E thru 8</td>
       <td>Sam Burns E
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Jon Rahm E
 Not started</td>
-      <td class="greyout leftborder">Jordan Spieth E
+      <td>Jordan Spieth E
 Not started</td>
-      <td class="greyout">Will Zalatoris E
+      <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
+      <td class="greyout">Justin Thomas(W) +1
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">NewCastle Magpies</td>
       <td class="bigbold">0</td>
-      <td>Justin Thomas(W) E
-E thru 8</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Collin Morikawa E
 Not started</td>
-      <td class="greyout leftborder">Xander Schauffele E
+      <td>Xander Schauffele E
 Not started</td>
-      <td class="greyout">Jordan Spieth E
+      <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
+      <td class="greyout">Justin Thomas(W) +1
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
@@ -968,8 +968,8 @@ Not started</td>
 E thru 9</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
-      <td class="greyout">Justin Thomas E
-E thru 8</td>
+      <td class="greyout">Justin Thomas +1
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Downhill Down Wind</td>
@@ -980,44 +980,44 @@ Not started</td>
 Not started</td>
       <td>Rory McIlroy E
 Not started</td>
-      <td>Justin Thomas E
-E thru 8</td>
-      <td class="greyout leftborder">Tiger Woods E
-E thru 9</td>
+      <td>Tiger Woods E
+E thru 10</td>
+      <td class="greyout leftborder">Justin Thomas +1
++1 thru 9</td>
       <td class="greyout">Gary Woodland +2
-+2 thru 4</td>
++2 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">0</td>
       <td>Tiger Woods(W) E
-E thru 9</td>
+E thru 10</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Rory McIlroy E
 Not started</td>
       <td>Collin Morikawa E
 Not started</td>
-      <td class="greyout leftborder">Justin Thomas E
-E thru 8</td>
-      <td class="greyout">Will Zalatoris E
+      <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
+      <td class="greyout">Justin Thomas +1
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Bryan Francis</td>
       <td class="bigbold">0</td>
-      <td>Justin Thomas(W) E
-E thru 8</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Jon Rahm E
 Not started</td>
       <td>Xander Schauffele E
 Not started</td>
-      <td class="greyout leftborder">Jordan Spieth E
+      <td>Jordan Spieth E
 Not started</td>
-      <td class="greyout">Louis Oosthuizen +1
+      <td class="greyout leftborder">Justin Thomas(W) +1
 +1 thru 9</td>
+      <td class="greyout">Louis Oosthuizen +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
@@ -1030,10 +1030,10 @@ Not started</td>
 Not started</td>
       <td>Jordan Spieth E
 Not started</td>
-      <td class="greyout leftborder">Justin Thomas E
-E thru 8</td>
-      <td class="greyout">Will Zalatoris E
+      <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
+      <td class="greyout">Justin Thomas +1
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
@@ -1048,8 +1048,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele E
 Not started</td>
-      <td class="greyout">Justin Thomas E
-E thru 8</td>
+      <td class="greyout">Justin Thomas +1
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
@@ -1062,10 +1062,10 @@ E thru 8</td>
 Not started</td>
       <td>Jordan Spieth E
 Not started</td>
-      <td class="greyout leftborder">Louis Oosthuizen +1
-+1 thru 9</td>
-      <td class="greyout">Shane Lowry +2
+      <td class="greyout leftborder">Shane Lowry +2
 +2 thru 11</td>
+      <td class="greyout">Louis Oosthuizen +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
