--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:20:56 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:21:49 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -139,22 +139,6 @@ body {
   </tr>
   </thead>
   <tbody>
-    <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-5</td>
-      <td>Joaquin Niemann -3
--3 thru 9</td>
-      <td>Cameron Smith -2
--2 thru 10</td>
-      <td>Justin Thomas E
-E thru 8</td>
-      <td>Viktor Hovland E
-Not started</td>
-      <td class="greyout leftborder">Rory McIlroy E
-Not started</td>
-      <td class="greyout">Tommy Fleetwood(W) +1
-+1 thru 10</td>
-    </tr>
     <tr>
       <td class="bigbold">Larry Judge</td>
       <td class="bigbold">-4</td>
@@ -167,9 +151,25 @@ Not started</td>
       <td>Xander Schauffele E
 Not started</td>
       <td class="greyout leftborder">Sam Burns E
-Not started</td>
+E thru 1</td>
       <td class="greyout">Jordan Spieth E
 Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith -2
+-2 thru 10</td>
+      <td>Joaquin Niemann -2
+-2 thru 10</td>
+      <td>Viktor Hovland E
+Not started</td>
+      <td>Rory McIlroy E
+Not started</td>
+      <td class="greyout leftborder">Tommy Fleetwood(W) +1
++1 thru 10</td>
+      <td class="greyout">Justin Thomas +1
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -179,7 +179,7 @@ Not started</td>
       <td>Daniel Berger -1
 -1 thru 10</td>
       <td>Robert MacIntyre -1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Collin Morikawa E
 Not started</td>
       <td class="greyout leftborder">Jon Rahm E
@@ -200,8 +200,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
-      <td class="greyout">Justin Thomas E
-E thru 8</td>
+      <td class="greyout">Justin Thomas +1
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
@@ -224,14 +224,14 @@ Not started</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -2
 -2 thru 10</td>
-      <td>Justin Thomas(W) E
-E thru 8</td>
       <td>Matthew Fitzpatrick E
 Not started</td>
       <td>Brooks Koepka E
 Not started</td>
-      <td class="greyout leftborder">Will Zalatoris E
+      <td>Will Zalatoris E
 Not started</td>
+      <td class="greyout leftborder">Justin Thomas(W) +1
++1 thru 9</td>
       <td class="greyout">Shane Lowry +2
 +2 thru 11</td>
     </tr>
@@ -240,14 +240,14 @@ Not started</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners -1
 -1 thru 4</td>
-      <td>Justin Thomas(W) E
-E thru 8</td>
       <td>Jon Rahm E
 Not started</td>
       <td>Patrick Cantlay E
 Not started</td>
-      <td class="greyout leftborder">Tyrrell Hatton E
+      <td>Tyrrell Hatton E
 Not started</td>
+      <td class="greyout leftborder">Justin Thomas(W) +1
++1 thru 9</td>
       <td class="greyout">Shane Lowry +2
 +2 thru 11</td>
     </tr>
@@ -260,18 +260,18 @@ Not started</td>
 Not started</td>
       <td>Dustin Johnson E
 Not started</td>
-      <td>Justin Thomas E
-E thru 8</td>
-      <td class="greyout leftborder">Russell Henley E
+      <td>Russell Henley E
 E thru 4</td>
-      <td class="greyout">Louis Oosthuizen +1
+      <td class="greyout leftborder">Justin Thomas +1
 +1 thru 9</td>
+      <td class="greyout">Louis Oosthuizen +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
       <td class="bigbold">-1</td>
       <td>Patrick Reed -1
--1 thru 2</td>
+-1 thru 3</td>
       <td>Viktor Hovland(W) E
 Not started</td>
       <td>Jon Rahm E
@@ -281,7 +281,7 @@ Not started</td>
       <td class="greyout leftborder">Brooks Koepka E
 Not started</td>
       <td class="greyout">Luke List +3
-+3 thru 12</td>
++3 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
@@ -290,28 +290,28 @@ Not started</td>
 -1 thru 1</td>
       <td>Viktor Hovland(W) E
 Not started</td>
-      <td>Justin Thomas E
-E thru 8</td>
       <td>Collin Morikawa E
 Not started</td>
-      <td class="greyout leftborder">Brooks Koepka E
+      <td>Brooks Koepka E
 Not started</td>
-      <td class="greyout">Patrick Cantlay E
+      <td class="greyout leftborder">Patrick Cantlay E
 Not started</td>
+      <td class="greyout">Justin Thomas +1
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-1</td>
       <td>Scottie Scheffler -1
 -1 thru 8</td>
-      <td>Justin Thomas(W) E
-E thru 8</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Will Zalatoris E
 Not started</td>
-      <td class="greyout leftborder">Tony Finau E
+      <td>Tony Finau E
 E thru 8</td>
+      <td class="greyout leftborder">Justin Thomas(W) +1
++1 thru 9</td>
       <td class="greyout">Shane Lowry +2
 +2 thru 11</td>
     </tr>
@@ -336,32 +336,32 @@ Not started</td>
       <td class="bigbold">-1</td>
       <td>Daniel Berger -1
 -1 thru 10</td>
-      <td>Justin Thomas(W) E
-E thru 8</td>
       <td>Collin Morikawa E
 Not started</td>
       <td>Brooks Koepka E
 Not started</td>
-      <td class="greyout leftborder">Will Zalatoris E
+      <td>Will Zalatoris E
 Not started</td>
-      <td class="greyout">Tony Finau E
+      <td class="greyout leftborder">Tony Finau E
 E thru 8</td>
+      <td class="greyout">Justin Thomas(W) +1
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners -1
 -1 thru 4</td>
-      <td>Justin Thomas(W) E
-E thru 8</td>
       <td>Jon Rahm E
 Not started</td>
       <td>Xander Schauffele E
 Not started</td>
-      <td class="greyout leftborder">Jordan Spieth E
+      <td>Jordan Spieth E
 Not started</td>
-      <td class="greyout">Louis Oosthuizen +1
+      <td class="greyout leftborder">Justin Thomas(W) +1
 +1 thru 9</td>
+      <td class="greyout">Louis Oosthuizen +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon-Not Paid</td>
